# gpar

./: .gitignore  .travis.yml  Makefile  README.md  requirements.txt  setup.cfg  setup.py  todo.tasks
.github/workflows/: ci.yml  publish.yml
doc/: Makefile  readme.rst
doc/source/: gpar.core.rst
docs/: conf.py
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/gpar/: model.html  regression.html
docs/_build/html/_sources/: api.rst.txt  readme.rst.txt
docs/_build/html/_sources/source/: gpar.model.rst.txt  gpar.regression.rst.txt
docs/_build/html/source/: gpar.model.html  gpar.regression.html
examples/: experiment_synthetic.py  model_sample.py  synthetic.py  toy.py
examples/paper/: air_temp.py  air_temp_process.py  correlation.py  eeg.py  exchange.py  jura.py  ml.py  synthetic.py
examples/paper/ml_data/: evaluate_neural_net.py  grid_search.py
gpar/: __init__.py  core.py  data.py  gpar.py  model.py  regression.py
tests/: __init__.py  test.py  test_model.py  test_regression.py  util.py
