[metadata]
name = gpar
version = 1.0.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Implementation of the Gaussian Process Autoregressive Regression Model
url = https://github.com/wesselb/gpar
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
